added get sum all transaction debtors
